--- a/css/style.css
+++ b/css/style.css
@@ -485,13 +485,6 @@ ul.site-navigation {
 
     z-index: 5;
 
-    /* animation-direction: normal;
-    -webkit-animation-name: emergence;
-            animation-name: emergence;
-
-    -webkit-animation-duration: 1s;
-            animation-duration: 1s; */
-
     width: 568px;
     min-height: 395px;
     margin-left: auto;
@@ -507,14 +500,7 @@ ul.site-navigation {
 }
 
 .modal-toggle {
-    animation-direction: reverse;
-    -webkit-animation-name: emergence;
-            animation-name: emergence;
 
-    -webkit-animation-duration: 0.6s;
-            animation-duration: 0.6s;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
 }
 
 .hotels-search {
@@ -1469,16 +1455,6 @@ p.rating-number {
     background-color: #503e33;
 }
 
-@-webkit-keyframes emergence {
-    0% {opacity: 0;}
-    100% { opacity: 1;}
-}
-
-@keyframes emergence {
-    0% {opacity: 0;}
-    100% { opacity: 1;}
-}
-
 .map iframe {
     border: 0;
 }
@@ -1566,4 +1542,26 @@ p.rating-number {
 .modal-error {
     animation-name: shake;
     animation-duration: 0.6s;
+}
+
+.modal-close {
+    display: none;
+}
+
+.modal-open {
+    animation-name: modal-open;
+    animation-duration: 1s;
+}
+
+
+@keyframes modal-open {
+    00% {
+        transform: translateX(-1000%);
+    }
+    90%  {
+        transform: translateX(-45%);
+    }
+    100% {
+        transform: translateX(-55%);
+    }
 }
